Updated by dingar

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -155,7 +155,7 @@ action_clear_problem.description=\u6e05\u7a7a\u5217\u8868\u4e2d\u7684\u9519\u8be
 #orig#action_clear_problem.key=C
 action_clear_problem.key=C
 #orig#action_clear_problem.name=Cleanup
-action_clear_problem.name=\u6e05\u7406
+action_clear_problem.name=\u6e05\u7a7a
 
 #orig#action_configure_transfer_mode.description=Configure this transfer mode
 action_configure_transfer_mode.description=\u914d\u7f6e\u4f20\u8f93\u6a21\u5f0f
@@ -210,7 +210,7 @@ action_edit_archive.name=\u7f16\u8f91\u5b58\u6863
 action_edit_ignore.description=\u7f16\u8f91\u5ffd\u7565\u5217\u8868\u7684\u6837\u5f0f
 #orig#action_edit_ignore.key=E
 action_edit_ignore.key=E
-##action_edit_ignore.name=Edit
+action_edit_ignore.name=\u7f16\u8f91
 
 #orig#action_find_computers.description=Search for other computers
 action_find_computers.description=\u641c\u5bfb\u5176\u5b83\u8ba1\u7b97\u673a
@@ -848,12 +848,12 @@ download.busy.title=\u4e0b\u8f7d\u6587\u4ef6
 #orig#downloads_information_card.auto_cleanup.days={0} day(s)
 downloads_information_card.auto_cleanup.days={0}\u5929
 #orig#downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
-downloads_information_card.auto_cleanup.description=\u5728\u4e0b\u8f7d\u5b8c\u6210\u65f6\u6e05\u9664
-##downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
+downloads_information_card.auto_cleanup.description=\u5728\u4e0b\u8f7d\u5b8c\u6210\u65f6\u6e05\u7a7a
+downloads_information_card.auto_cleanup.frequency_tip=\u81ea\u52a8\u6e05\u7a7a\u9891\u7387
 #orig#downloads_information_card.auto_cleanup.immediate=Immediate
 downloads_information_card.auto_cleanup.immediate=\u7acb\u5373
 #orig#downloads_information_card.auto_cleanup.name=Auto-cleanup
-downloads_information_card.auto_cleanup.name=\u81ea\u52a8\u6e05\u9664
+downloads_information_card.auto_cleanup.name=\u81ea\u52a8\u6e05\u7a7a
 #orig#downloads_information_card.title=Downloads
 downloads_information_card.title=\u4e0b\u8f7d
 
@@ -909,7 +909,7 @@ exp_folder_view.local={0} \u672c\u5730
 exp_folder_view.members=\u6210\u5458\: {0} ({1}\u4e2a\u5df2\u7ecf\u8fde\u63a5)
 #orig#exp_folder_view.never_synchronized=Never synchronized
 exp_folder_view.never_synchronized=\u4ece\u4e0d\u540c\u6b65
-##exp_folder_view.new_files_tip_text={0} new file(s)
+exp_folder_view.new_files_tip_text={0} \u65b0\u6587\u4ef6
 #orig#exp_folder_view.not_yet_scanned=Not yet scanned
 exp_folder_view.not_yet_scanned=\u5c1a\u672a\u626b\u63cf
 #orig#exp_folder_view.synchronized={0}% synchronized
@@ -971,11 +971,11 @@ file_info.recently_downloaded=\u6700\u8fd1\u4e0b\u8f7d
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=\u65b0\u7248\u672c\u88ab\u5176\u4ed6\u7528\u6237\u5220\u9664
 
-##file_version_tab.current_version=Current version\: {0}
-##file_version_tab.date=Date\: {0}
+file_version_tab.current_version=\u5f53\u524d\u7248\u672c\: {0}
+file_version_tab.date=\u65e5\u671f\: {0}
 #orig#file_version_tab.no_versions_available=No version history available
 file_version_tab.no_versions_available=\u4e0d\u5b58\u5728\u7248\u672c\u5386\u53f2
-##file_version_tab.size=Size\: {0}
+file_version_tab.size=\u5927\u5c0f\: {0}
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=\u65e5\u671f
@@ -1225,11 +1225,11 @@ free_limit_dialog.title=\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528
 free_limit_dialog.whatispro=\u4e3a\u4ec0\u4e48\u6211\u8981\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248?
 
 #orig#friend.search.personal.message.text=You may include a personal message
-friend.search.personal.message.text=\u4f60\u53ef\u80fd\u5305\u542b\u4e86\u4e00\u6761\u7559\u8a00
+friend.search.personal.message.text=\u4f60\u53ef\u4ee5\u8fdb\u884c\u7559\u8a00
 #orig#friend.search.personal.message.text2=You may include a personal message for {0}
-friend.search.personal.message.text2=\u4f60\u53ef\u80fd\u5305\u542b\u4e86\u4e00\u6761\u7ed9 {0} \u7684\u7559\u8a00
+friend.search.personal.message.text2=\u4f60\u53ef\u4ee5\u7ed9 {0} \u7559\u8a00
 #orig#friend.search.personal.message.title=Add friend message
-friend.search.personal.message.title=\u6dfb\u52a0\u597d\u53cb\u4fe1\u606f
+friend.search.personal.message.title=\u7ed9\u597d\u53cb\u7559\u8a00
 
 #orig#friend_search.no_computers_found=No computers found
 friend_search.no_computers_found=\u6ca1\u6709\u627e\u5230\u8ba1\u7b97\u673a
@@ -1253,14 +1253,14 @@ friends_panel.n_a=n/a
 #orig#friends_panel.unable_to_connect=Currently online (Unable to connect)
 friends_panel.unable_to_connect=\u5f53\u524d\u5728\u7ebf (\u4e0d\u80fd\u8fde\u63a5)
 
-##friendship.notification.message=You have received a request for friendship.
-##friendship.notification.title=Friendship Request Received
+friendship.notification.message=\u4f60\u6536\u5230\u4e00\u4e2a\u597d\u53cb\u8bf7\u6c42You have received a request for friendship.
+friendship.notification.title=\u6536\u5230\u597d\u53cb\u8bf7\u6c42
 
 #orig#general.accept=Accept
 general.accept=\u63a5\u53d7
 #orig#general.application.name=PowerFolder
 general.application.name=PowerFolder
-##general.apply=Apply
+general.apply=\u5e94\u7528
 #orig#general.archive_mode=File archive (local)
 general.archive_mode=\u6587\u4ef6\u5f52\u6863(\u672c\u5730)
 #orig#general.cancel=Cancel
@@ -1313,9 +1313,9 @@ general.minutes=\u5206\u949f
 general.monday=\u661f\u671f\u4e00
 #orig#general.more.lower_case=more
 general.more.lower_case=\u66f4\u591a
-##general.network_mode.lan_only=LAN only
-##general.network_mode.private=LAN and Internet
-##general.network_mode.server_only=Server only
+general.network_mode.lan_only=\u4ec5\u5c40\u57df\u7f51
+general.network_mode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
+general.network_mode.server_only=\u4ec5\u670d\u52a1\u5668
 #orig#general.neverAskAgain=Never ask this again
 general.neverAskAgain=\u4e0d\u518d\u8be2\u95ee
 #orig#general.not_available=not available
@@ -1375,10 +1375,10 @@ general.yesterday=\u6628\u5929
 home_tab.computers=\u8ba1\u7b97\u673a
 #orig#home_tab.files_available=File(s) available
 home_tab.files_available=\u53ef\u7528\u7684\u6587\u4ef6
-##home_tab.files_downloads=Download(s)
-##home_tab.files_downloads_active=Download(s) ({0} KB/s)
-##home_tab.files_uploads=Upload(s)
-##home_tab.files_uploads_active=Upload(s) ({0} KB/s)
+home_tab.files_downloads=\u4e0b\u8f7d
+home_tab.files_downloads_active=\u4e0b\u8f7d ({0} KB/s)
+home_tab.files_uploads=\u4e0a\u4f20
+home_tab.files_uploads_active=\u4e0a\u4f20 ({0} KB/s)
 #orig#home_tab.folders=Folder(s)
 home_tab.folders=\u6587\u4ef6\u5939
 #orig#home_tab.in_sync=All folders are synchronized
@@ -1451,8 +1451,8 @@ image_file_info.resolution=\u5206\u8fa8\u7387
 #orig#image_file_info.unknown=Unknown
 image_file_info.unknown=\u672a\u77e5
 
-##invitation.notification.message=You have received an invitation to a folder.
-##invitation.notification.title=Invitation Received
+invitation.notification.message=\u4f60\u6536\u5230\u4e00\u4e2a\u6587\u4ef6\u5939\u9080\u8bf7You have received an invitation to a folder.
+invitation.notification.title=\u6536\u5230\u9080\u8bf7
 #orig#invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.text=\u5199\u5165\u9080\u8bf7\u65f6\u51fa\u9519\uff0c\u8bf7\u91cd\u8bd5\u3002
 #orig#invitation.utils.unable.write.title=Unable to write invitation
@@ -1607,9 +1607,9 @@ online_storage.connecting=\u8fde\u63a5\u5230\u670d\u52a1\u5668
 
 #orig#online_storage_component.online_storage_text=Online storage\: {0}%
 online_storage_component.online_storage_text=\u5728\u7ebf\u5b58\u50a8\: {0}%
-##online_storage_component.online_storage_tip=Open this online storage folder in browser
-##online_storage_component.online_storage_unjoined_text=Online Storage\: 0% (start now)
-##online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
+online_storage_component.online_storage_tip=\u5728\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u5728\u7ebf\u5b58\u50a8\u6587\u4ef6\u5939
+online_storage_component.online_storage_unjoined_text=\u5728\u7ebf\u5b58\u50a8\: 0% (\u73b0\u5728\u5f00\u59cb)
+online_storage_component.online_storage_unjoined_tip=\u5907\u4efd\u8fd9\u4e2a\u6587\u4ef6\u5939\u5230\u5728\u7ebf\u5b58\u50a8
 #orig#online_storage_component.online_storage_warning=Online storage quota exceeded
 online_storage_component.online_storage_warning=\u8d85\u51fa\u5728\u7ebf\u5b58\u50a8\u5bb9\u91cf
 
@@ -1669,7 +1669,7 @@ preferences.dialog.bind.tooltip=\u9009\u62e9PowerFolder\u4f7f\u7528\u7684IP\u573
 preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
-##preferences.dialog.default_archive_mode.text=Default archive mode
+preferences.dialog.default_archive_mode.text=\u9ed8\u8ba4\u5b58\u6863\u6a21\u5f0f
 #orig#preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync=\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
@@ -1874,10 +1874,10 @@ preferences.dialog.use.relayed.connections=\u4f7f\u7528\u5ef6\u8fdf\u8fde\u63a5
 preferences.dialog.use.udt.connections=\u4f7f\u7528UDT\u8fde\u63a5
 #orig#preferences.dialog.use_delta_on_internet=on Internet
 preferences.dialog.use_delta_on_internet=\u4f7f\u7528\u4e92\u8054\u7f51
-##preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
+preferences.dialog.use_delta_on_internet.tooltip=\u7528\u4e8e\u53ea\u4f20\u8f93\u6587\u4ef6\u66f4\u6539\u7684\u90e8\u5206\u4ee5\u8282\u7ea6\u65f6\u95f4
 #orig#preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.use_delta_on_lan=\u4f7f\u7528\u5c40\u57df\u7f51
-##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
+preferences.dialog.use_delta_on_lan.tooltip=\u5982\u679c\u6240\u5728\u7f51\u7edc\u6216VPN\u901f\u5ea6\u6162\u65f6\u542f\u7528\uff08\u53ef\u80fd\u4f1a\u5f71\u54cdCPU\u8d1f\u8f7d\uff09
 #orig#preferences.dialog.use_mass_delete=Use mass delete protection
 preferences.dialog.use_mass_delete=\u4f7f\u7528\u5927\u91cf\u5220\u9664\u4fdd\u62a4
 #orig#preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
@@ -2127,7 +2127,7 @@ select_invitation.text2=\u4ece\u4e0d\u53d1\u653e\u9080\u8bf7\u7ed9\u4e0d\u4fe1\u
 send_invitation.placetostore=\u9009\u62e9\u5b58\u653e\u9080\u8bf7\u7684\u4f4d\u7f6e
 
 #orig#send_invitations_advanced.clear_tip=Clear directory
-send_invitations_advanced.clear_tip=\u6e05\u7406\u76ee\u5f55
+send_invitations_advanced.clear_tip=\u6e05\u7a7a\u76ee\u5f55
 #orig#send_invitations_advanced.file_hint=Directory
 send_invitations_advanced.file_hint=\u76ee\u5f55
 #orig#send_invitations_advanced.file_label=Save to file
@@ -2206,6 +2206,8 @@ settings_tab.working.description=\u6b63\u5728\u79fb\u52a8\u6587\u4ef6\u5939
 #orig#settings_tab.working.title=Moving folder
 settings_tab.working.title=\u79fb\u52a8\u6587\u4ef6\u5939
 
+skin.snow_land=\u96ea\u5730\u98ce\u60c5
+skin.snowland=\u96ea\u5730\u98ce\u60c5
 #orig#skin.black_moon=Black Moon
 skin.black_moon=\u9ed1\u8272\u6708\u5149
 #orig#skin.black_star=Black Star
@@ -2263,7 +2265,7 @@ status_bar.status_change.disabled=PowerFolder\u5df2\u7ecf\u7981\u7528
 #orig#status_bar.status_change.title=Connection Status
 status_bar.status_change.title=\u8fde\u63a5\u72b6\u6001
 
-##sync_icon_button_mini.tip=Synchronize folder now
+sync_icon_button_mini.tip=\u73b0\u5728\u540c\u6b65\u6587\u4ef6\u5939
 
 #orig#synchronization.notice.title=Activated transfer mode {0}
 synchronization.notice.title=\u6fc0\u6d3b\u540c\u6b65\u9009\u9879 {0}
@@ -2416,12 +2418,12 @@ uicontroller.remote_mass_delete.warning_title=\u68c0\u6d4b\u5230\u5927\u91cf\u52
 #orig#uploads_information_card.auto_cleanup.days={0} day(s)
 uploads_information_card.auto_cleanup.days={0} \u5929
 #orig#uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
-uploads_information_card.auto_cleanup.description=\u4e0a\u4f20\u7ed3\u675f\u65f6\u8fdb\u884c\u6e05\u7406
-##uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
+uploads_information_card.auto_cleanup.description=\u4e0a\u4f20\u7ed3\u675f\u65f6\u8fdb\u884c\u6e05\u7a7a
+uploads_information_card.auto_cleanup.frequency_tip=\u81ea\u52a8\u6e05\u7a7a\u9891\u7387
 #orig#uploads_information_card.auto_cleanup.immediate=Immediate
 uploads_information_card.auto_cleanup.immediate=\u7acb\u5373
 #orig#uploads_information_card.auto_cleanup.name=Auto-cleanup
-uploads_information_card.auto_cleanup.name=\u81ea\u52a8\u6e05\u7406
+uploads_information_card.auto_cleanup.name=\u81ea\u52a8\u6e05\u7a7a
 #orig#uploads_information_card.title=Uploads
 uploads_information_card.title=\u4e0a\u4f20
 
@@ -2433,14 +2435,14 @@ user.dir.custom=\u81ea\u5b9a\u4e49
 user.dir.desktop=\u684c\u9762
 #orig#user.dir.documents=Documents
 user.dir.documents=\u6587\u6863
-##user.dir.downloads=Downloads
+user.dir.downloads=\u4e0b\u8f7d
 #orig#user.dir.evolution=Evolution
 user.dir.evolution=Evolution
 #orig#user.dir.favorites=Favorites
 user.dir.favorites=\u6536\u85cf
 #orig#user.dir.links=Links
 user.dir.links=\u94fe\u63a5
-##user.dir.movies=Movies
+user.dir.movies=\u89c6\u9891
 #orig#user.dir.music=Music
 user.dir.music=\u97f3\u4e50
 #orig#user.dir.my_documents=My Documents
@@ -2453,10 +2455,10 @@ user.dir.my_pictures=\u6211\u7684\u56fe\u7247
 user.dir.my_videos=\u6211\u7684\u89c6\u9891
 #orig#user.dir.pictures=Pictures
 user.dir.pictures=\u56fe\u7247
-##user.dir.public=Public
+user.dir.public=\u516c\u5f00
 #orig#user.dir.recent_documents=Recent Documents
 user.dir.recent_documents=\u6211\u6700\u8fd1\u7684\u6587\u6863
-##user.dir.sites=Sites
+user.dir.sites=\u7ad9\u70b9
 #orig#user.dir.videos=Videos
 user.dir.videos=\u89c6\u9891
 
@@ -2644,7 +2646,7 @@ wizard.tell_friend.information1=\u53d1\u9001\u90ae\u4ef6\u7ed9\u597d\u53cb\uff0c
 #orig#wizard.tell_friend.information2=Emails will be sent direct from PowerFolder central.
 wizard.tell_friend.information2=\u90ae\u4ef6\u5c06\u4ecePowerFolder\u4e2d\u592e\u670d\u52a1\u5668\u76f4\u63a5\u53d1\u9001\u3002
 #orig#wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
-wizard.tell_friend.personal_message=\u8bf7\u4e3a\u6536\u4fe1\u4eba\u5199\u4e00\u6bb5\u7559\u8a00\u3002 (\u53ef\u9760)
+wizard.tell_friend.personal_message=\u8bf7\u4e3a\u88ab\u9080\u8bf7\u4eba\u5199\u4e00\u6bb5\u7559\u8a00\u3002 (\u53ef\u9009)
 #orig#wizard.tell_friend.success=Emails have been sent to the recipients.
 wizard.tell_friend.success=\u7535\u5b50\u90ae\u4ef6\u5df2\u7ecf\u53d1\u9001\u7ed9\u6536\u4ef6\u4eba\u3002
 #orig#wizard.tell_friend.title=Tell a friend about PowerFolder
@@ -2705,7 +2707,7 @@ wizard.what_to_do.join_online.tip=\u4ece\u4e4b\u524d\u8bbe\u7f6e\u7684\u8ba1\u7b
 wizard.what_to_do.load_invite=\u6253\u5f00\u9080\u8bf7\u6587\u4ef6
 #orig#wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite.tip=\u9009\u62e9\u8fd9\u4e2a\u9009\u9879\u4ece\u9080\u8bf7\u6587\u4ef6\u8bbe\u7f6e\u6587\u4ef6\u5939
-##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
+wizard.what_to_do.no_login=\u6ca1\u6709\u767b\u5f55\u3002\u8bf7\u5148\u767b\u5f55\u6216\u7b49\u5f85\u8fde\u63a5\u3002
 #orig#wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 wizard.what_to_do.no_os_text=\u6ca1\u6709\u627e\u5230\u53ef\u4ee5\u540c\u8fd9\u53f0\u7535\u8111\u540c\u6b65\u7684\n\u5728\u7ebf\u5b58\u50a8\u6587\u4ef6\u3002
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
