Add file name to description,refs #1770

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -600,17 +600,17 @@ file_info.remote_deleted=\u062a\u0645 \u0645\u062d\u0648 \u0646\u0633\u062e\u062
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=\u0648\u062c\u0651\u062f \u0627\u0633\u0645 \u0645\u0644\u0641 \u0645\u0643\u0631\u0631 (\u0645\u0639 \u062d\u0627\u0644\u0629 \u0627\u062e\u0631\u0649)
+filename_problem.duplicate=\u0648\u062c\u0651\u062f \u0627\u0633\u0645 \u0645\u0644\u0641 \u0645\u0643\u0631\u0631 (\u0645\u0639 \u062d\u0627\u0644\u0629 \u0627\u062e\u0631\u0649) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u064a\u0646\u062a\u0647\u064a \u0628\u0631\u0645\u0648\u0632 \u063a\u064a\u0631 \u0645\u0648\u0635\u0649 \u0628\u0647\u0627
+filename_problem.ends_with_illegal_char=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u064a\u0646\u062a\u0647\u064a \u0628\u0631\u0645\u0648\u0632 \u063a\u064a\u0631 \u0645\u0648\u0635\u0649 \u0628\u0647\u0627 - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u064a\u0646\u062a\u0647\u064a \u0628\u0631\u0645\u0648\u0632 \u063a\u064a\u0631 \u0645\u0648\u0635\u0649 \u0628\u0647\u0627
+filename_problem.not_recommended_chars=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u064a\u0646\u062a\u0647\u064a \u0628\u0631\u0645\u0648\u0632 \u063a\u064a\u0631 \u0645\u0648\u0635\u0649 \u0628\u0647\u0627 - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u0645\u062d\u062c\u0648\u0632\u0644\u0645\u0644\u0641 \u0627\u062e\u0631 \u0641\u064a \u0646\u0638\u0627\u0645 \u0648\u064a\u0646\u062f\u0648\u0632
+filename_problem.reserved_filename=\u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641 \u0645\u062d\u062c\u0648\u0632\u0644\u0645\u0644\u0641 \u0627\u062e\u0631 \u0641\u064a \u0646\u0638\u0627\u0645 \u0648\u064a\u0646\u062f\u0648\u0632 - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -694,7 +694,7 @@ folder_panel.settings_tab.editbutton.name=\u062a\u0639\u062f\u064a\u0644
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=\u0625\u0632\u0627\u0644\u0629
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
