--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -968,21 +968,21 @@ file_versions_table_model.size=Gr\u00f6\u00dfe
 file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Doppelter Dateiname erkannt (mit unterschiedlicher Gro\u00df/Kleinschreibung)
+filename_problem.duplicate=Doppelter Dateiname erkannt (mit unterschiedlicher Gro\u00df/Kleinschreibung) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=Dateiname endet mit Zeichen, die Probleme verursachen k\u00f6nnten.
+filename_problem.ends_with_illegal_char=Dateiname endet mit Zeichen, die Probleme verursachen k\u00f6nnten. - {0}
 #orig#filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 filename_problem.ends_with_illegal_char.soln_desc=Datei umbennen
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=Dateiname enh\u00e4lt Zeichen, die Probleme verursachen k\u00f6nnten.
+filename_problem.not_recommended_chars=Dateiname enh\u00e4lt Zeichen, die Probleme verursachen k\u00f6nnten. - {0}
 #orig#filename_problem.not_recommended_chars.soln_desc=Rename the file
 filename_problem.not_recommended_chars.soln_desc=Datei umbenennen
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Der Dateiname darf unter Windows nicht verwendet werden (reserviert).
+filename_problem.reserved_filename=Der Dateiname darf unter Windows nicht verwendet werden (reserviert). - {0}
 #orig#filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.reserved_filename.soln_desc=Datei umbenennen
 #orig#filename_problem.too_long=The filename is too long
-filename_problem.too_long=Dateiname zu lang
+filename_problem.too_long=Dateiname zu lang - {0}
 #orig#filename_problem.too_long.soln_desc=Rename the file
 filename_problem.too_long.soln_desc=Datei umbenennen
 
@@ -1126,8 +1126,8 @@ folder_panel.settings_tab.editbutton.name=\u00c4ndern
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Entfernen
 
-#orig#folder_problem.no_owner=No owner found
-folder_problem.no_owner=Kein Eigent\u00fcmer gefunden
+#orig#folder_problem.no_owner=No owner found - {0}
+folder_problem.no_owner=Kein Eigent\u00fcmer gefunden - {0}
 #orig#folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 folder_problem.no_owner.no_login.message=Kann nicht Eigent\u00fcmer werden.\nBitte erst anmelden.
 #orig#folder_problem.no_owner.no_login.title=Not logged in
