--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -688,14 +688,14 @@ files_table_model.size=Size
 files_table_model.modified_by=Modified by
 files_table_model.date=Date
 
-filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
+filename_problem.duplicate=Duplicate filename found (with different case) - {0}
+filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended - {0}
 filename_problem.ends_with_illegal_char.soln_desc=Rename the file
-filename_problem.not_recommended_chars=The filename contains characters that are not recommended
+filename_problem.not_recommended_chars=The filename contains characters that are not recommended - {0}
 filename_problem.not_recommended_chars.soln_desc=Rename the file
-filename_problem.reserved_filename=The filename is a reserved filename on Windows
+filename_problem.reserved_filename=The filename is a reserved filename on Windows - {0}
 filename_problem.reserved_filename.soln_desc=Rename the file
-filename_problem.too_long=The filename is too long
+filename_problem.too_long=The filename is too long - {0}
 filename_problem.too_long.soln_desc=Rename the file
 
 files_stats_panel.local_label=Local: {0}
@@ -743,7 +743,7 @@ folder_problem.table_model.description=Description
 folder_problem.table_model.wiki_link=Wiki Link
 folder_problem.table_model.solution=Solution
 folder_problem.table_model.not_available=Not available
-folder_problem.no_owner=No owner found
+folder_problem.no_owner=No owner found - {0}
 folder_problem.no_owner.soln_desc=Become owner of this folder now.
 folder_problem.no_owner.no_login.title=Not logged in
 folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
