--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -636,17 +636,17 @@ file_info.remote_deleted=Nouvelle version effac\u00e9e par un autre utilisateur
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Dupliquer le fichier trouv\u00e9 (en modifiant la casse)
+filename_problem.duplicate=Dupliquer le fichier trouv\u00e9 (en modifiant la casse) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=Le nom de fichier se termine avec des caract\u00e8res non recommand\u00e9s
+filename_problem.ends_with_illegal_char=Le nom de fichier se termine avec des caract\u00e8res non recommand\u00e9s - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=Le nom de fichier contient des caract\u00e8res non recommand\u00e9s
+filename_problem.not_recommended_chars=Le nom de fichier contient des caract\u00e8res non recommand\u00e9s - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Le nom de fichier est r\u00e9serv\u00e9 par Windows
+filename_problem.reserved_filename=Le nom de fichier est r\u00e9serv\u00e9 par Windows - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -736,7 +736,7 @@ folder_panel.settings_tab.editbutton.name=Editer
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Retirer
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
