--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -986,22 +986,22 @@ file_versions_table_model.size=Dimensione
 file_versions_table_model.version=Versione
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Trovato nome di file duplicato (con maiuscole differenti)
+filename_problem.duplicate=Trovato nome di file duplicato (con maiuscole differenti) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=Il nome del file termina con caratteri non consigliabili
+filename_problem.ends_with_illegal_char=Il nome del file termina con caratteri non consigliabili - {0}
 #orig#filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 filename_problem.ends_with_illegal_char.soln_desc=Rinomina il file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=Il nome del file termina con caratteri che non sono consigliabili
+filename_problem.not_recommended_chars=Il nome del file termina con caratteri che non sono consigliabili - {0}
 #orig#filename_problem.not_recommended_chars.soln_desc=Rename the file
 filename_problem.not_recommended_chars.soln_desc=Rinomina il file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Il nome del file \u00e8 un nome riservato su sistemi Windows
+filename_problem.reserved_filename=Il nome del file \u00e8 un nome riservato su sistemi Windows - {0}
 #orig#filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.reserved_filename.soln_desc=Rinomina il file
 #orig#filename_problem.too_long=The filename is too long
 filename_problem.too_long=Nome del file troppo lungo
-#orig#filename_problem.too_long.soln_desc=Rename the file
+#orig#filename_problem.too_long.soln_desc=Rename the file - {0}
 filename_problem.too_long.soln_desc=Rinomina il file
 
 #orig#files_stats_panel.deleted_label=Deleted\: {0}
@@ -1145,8 +1145,8 @@ folder_panel.settings_tab.editbutton.name=Modifica
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Rimuovi
 
-#orig#folder_problem.no_owner=No owner found
-folder_problem.no_owner=Nessun proprietario trovato
+#orig#folder_problem.no_owner=No owner found - {0}
+folder_problem.no_owner=Nessun proprietario trovato - {0}
 #orig#folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 folder_problem.no_owner.no_login.message=Impossibile diventare proprietario.\nE' necessario autenticarsi.
 #orig#folder_problem.no_owner.no_login.title=Not logged in
