--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -985,21 +985,21 @@ file_versions_table_model.size=\u5927\u5c0f
 file_versions_table_model.version=\u7248\u672c
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=\u53d1\u73b0\u91cd\u590d\u6587\u4ef6\u540d (\u5927\u5c0f\u5199\u4e0d\u540c)
+filename_problem.duplicate=\u53d1\u73b0\u91cd\u590d\u6587\u4ef6\u540d (\u5927\u5c0f\u5199\u4e0d\u540c) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=\u6587\u4ef6\u540d\u4f7f\u7528\u4e0d\u63a8\u8350\u7684\u5b57\u7b26\u7ed3\u5c3e
+filename_problem.ends_with_illegal_char=\u6587\u4ef6\u540d\u4f7f\u7528\u4e0d\u63a8\u8350\u7684\u5b57\u7b26\u7ed3\u5c3e - {0}
 #orig#filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 filename_problem.ends_with_illegal_char.soln_desc=\u91cd\u547d\u540d\u6587\u4ef6
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=\u6587\u4ef6\u540d\u4f7f\u7528\u4e86\u4e0d\u63a8\u8350\u7684\u5b57\u7b26
+filename_problem.not_recommended_chars=\u6587\u4ef6\u540d\u4f7f\u7528\u4e86\u4e0d\u63a8\u8350\u7684\u5b57\u7b26 - {0}
 #orig#filename_problem.not_recommended_chars.soln_desc=Rename the file
 filename_problem.not_recommended_chars.soln_desc=\u91cd\u547d\u540d\u6587\u4ef6
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=\u6587\u4ef6\u540d\u662fWindows\u64cd\u4f5c\u7cfb\u7edf\u4fdd\u7559\u7684\u6587\u4ef6\u540d\u3002
+filename_problem.reserved_filename=\u6587\u4ef6\u540d\u662fWindows\u64cd\u4f5c\u7cfb\u7edf\u4fdd\u7559\u7684\u6587\u4ef6\u540d\u3002 - {0}
 #orig#filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.reserved_filename.soln_desc=\u91cd\u547d\u540d\u6587\u4ef6
 #orig#filename_problem.too_long=The filename is too long
-filename_problem.too_long=\u6587\u4ef6\u540d\u592a\u957f
+filename_problem.too_long=\u6587\u4ef6\u540d\u592a\u957f - {0}
 #orig#filename_problem.too_long.soln_desc=Rename the file
 filename_problem.too_long.soln_desc=\u91cd\u547d\u540d\u6587\u4ef6
 
@@ -1144,8 +1144,8 @@ folder_panel.settings_tab.editbutton.name=\u7f16\u8f91
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=\u5220\u9664
 
-#orig#folder_problem.no_owner=No owner found
-folder_problem.no_owner=\u6ca1\u6709\u53d1\u73b0\u62e5\u6709\u8005
+#orig#folder_problem.no_owner=No owner found - {0}
+folder_problem.no_owner=\u6ca1\u6709\u53d1\u73b0\u62e5\u6709\u8005 - {0}
 #orig#folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 folder_problem.no_owner.no_login.message=\u4e0d\u80fd\u6210\u4e3a\u62e5\u6709\u8005\u3002\n\u8bf7\u5148\u767b\u5f55\u3002
 #orig#folder_problem.no_owner.no_login.title=Not logged in
