--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -986,21 +986,21 @@ file_versions_table_model.size=Tama\u00f1oo
 file_versions_table_model.version=Versi\u00f3n
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Nombre de archivo duplicado (con diferente capitalizaci\u00f3n)
+filename_problem.duplicate=Nombre de archivo duplicado (con diferente capitalizaci\u00f3n) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=El nombre del archivo termina con caracteres inv\u00e1lidos o no recomendados
+filename_problem.ends_with_illegal_char=El nombre del archivo termina con caracteres inv\u00e1lidos o no recomendados - {0}
 #orig#filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 filename_problem.ends_with_illegal_char.soln_desc=Nombre nuevo
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=El nombre del archivo contiene caracteres no recomendados
+filename_problem.not_recommended_chars=El nombre del archivo contiene caracteres no recomendados - {0}
 #orig#filename_problem.not_recommended_chars.soln_desc=Rename the file
 filename_problem.not_recommended_chars.soln_desc=Nombre nuevo
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=El nombre del archivo es un nombre de archivo reservado en Windows
+filename_problem.reserved_filename=El nombre del archivo es un nombre de archivo reservado en Windows - {0}
 #orig#filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.reserved_filename.soln_desc=Nombre distinto para archivo
 #orig#filename_problem.too_long=The filename is too long
-filename_problem.too_long=Nombre de archivo demasiado largo
+filename_problem.too_long=Nombre de archivo demasiado largo - {0}
 #orig#filename_problem.too_long.soln_desc=Rename the file
 filename_problem.too_long.soln_desc=Nombre nuevo
 
@@ -1145,8 +1145,8 @@ folder_panel.settings_tab.editbutton.name=Editar
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Quitar
 
-#orig#folder_problem.no_owner=No owner found
-folder_problem.no_owner=Sin due\u00f1oo
+#orig#folder_problem.no_owner=No owner found - {0}
+folder_problem.no_owner=Sin due\u00f1oo - {0}
 #orig#folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 folder_problem.no_owner.no_login.message=No es posible volverse due\u00f1oo.\nFavor de obtener accesso.
 #orig#folder_problem.no_owner.no_login.title=Not logged in
