--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -636,17 +636,17 @@ file_info.remote_deleted=\u66f4\u65b0\u7248 \u4ed6\u30e6\u30fc\u30b6\u30fc\u306b
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u540d\uff08\u5927\u6587\u5b57\u5c0f\u6587\u5b57\u306e\u9055\u3044\u306f\u3042\u308a\uff09\u3092\u767a\u898b
+filename_problem.duplicate=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u540d\uff08\u5927\u6587\u5b57\u5c0f\u6587\u5b57\u306e\u9055\u3044\u306f\u3042\u308a\uff09\u3092\u767a\u898b - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=\u63a8\u5968\u3055\u308c\u306a\u3044\u6587\u5b57\u8a18\u53f7\u3067\u7d42\u308f\u308b\u30d5\u30a1\u30a4\u30eb\u540d
+filename_problem.ends_with_illegal_char=\u63a8\u5968\u3055\u308c\u306a\u3044\u6587\u5b57\u8a18\u53f7\u3067\u7d42\u308f\u308b\u30d5\u30a1\u30a4\u30eb\u540d - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=\u63a8\u5968\u3055\u308c\u306a\u3044\u6587\u5b57\u8a18\u53f7\u3092\u542b\u3080\u30d5\u30a1\u30a4\u30eb\u540d
+filename_problem.not_recommended_chars=\u63a8\u5968\u3055\u308c\u306a\u3044\u6587\u5b57\u8a18\u53f7\u3092\u542b\u3080\u30d5\u30a1\u30a4\u30eb\u540d - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Windows \u306b\u304a\u3051\u308b\u4e88\u7d04\u30d5\u30a1\u30a4\u30eb\u540d
+filename_problem.reserved_filename=Windows \u306b\u304a\u3051\u308b\u4e88\u7d04\u30d5\u30a1\u30a4\u30eb\u540d - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -736,7 +736,7 @@ folder_panel.settings_tab.editbutton.name=\u7de8\u96c6(E)
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=\u524a\u9664(R)
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
