--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -596,17 +596,17 @@ file_info.remote_deleted=Nieuwere versie verwijderd door ander gebruiker
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Dubbele bestandnaam gevonden (met verschil in hoofd/kleine letters)
+filename_problem.duplicate=Dubbele bestandnaam gevonden (met verschil in hoofd/kleine letters) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=De bestandnaam eindigd met karakters die niet aan te raden zijn
+filename_problem.ends_with_illegal_char=De bestandnaam eindigd met karakters die niet aan te raden zijn - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=De bestandsnaam bevat karakters die niet aan te raden zijn
+filename_problem.not_recommended_chars=De bestandsnaam bevat karakters die niet aan te raden zijn - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=De bestandsnaam is een reserveerde bestandsnaam op Windows
+filename_problem.reserved_filename=De bestandsnaam is een reserveerde bestandsnaam op Windows - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -690,7 +690,7 @@ folder_panel.settings_tab.editbutton.name=Bewerk
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Verwijder
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
