--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -605,17 +605,17 @@ file_info.remote_deleted=Nowsza wersja usuni\u0119ta przez innego u\u017cytkowni
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Znaleziono zduplikowan\u0105 nazw\u0119 pliku
+filename_problem.duplicate=Znaleziono zduplikowan\u0105 nazw\u0119 pliku - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=Nazwa pliku ko\u0144czy si\u0119 z\u0142ym znakiem
+filename_problem.ends_with_illegal_char=Nazwa pliku ko\u0144czy si\u0119 z\u0142ym znakiem - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=Nazwa pliku zawiera z\u0142e znaki
+filename_problem.not_recommended_chars=Nazwa pliku zawiera z\u0142e znaki - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Nazwa pliku jest zarezerwowan\u0105 nazw\u0105 w systemie Windows
+filename_problem.reserved_filename=Nazwa pliku jest zarezerwowan\u0105 nazw\u0105 w systemie Windows - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -699,7 +699,7 @@ folder_panel.settings_tab.editbutton.name=Edytuj
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Usu\u0144
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
