--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -604,17 +604,17 @@ file_info.remote_deleted=Vers\u00e3o mais recente apagada por outro usu\u00e1rio
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Nome de arquivo duplicado encontrados (apenas com diferen\u00e7as em mai\u00fasculas/min\u00fasculas)
+filename_problem.duplicate=Nome de arquivo duplicado encontrados (apenas com diferen\u00e7as em mai\u00fasculas/min\u00fasculas) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=O nome de arquivo termina com caracteres n\u00e3o recomendados
+filename_problem.ends_with_illegal_char=O nome de arquivo termina com caracteres n\u00e3o recomendados - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=O nome de arquivo cont\u00e9m caracters n\u00e3o recomendados
+filename_problem.not_recommended_chars=O nome de arquivo cont\u00e9m caracters n\u00e3o recomendados - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Este nome de arquivo \u00e9 reservado para uso exclusivo do Windows
+filename_problem.reserved_filename=Este nome de arquivo \u00e9 reservado para uso exclusivo do Windows - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -704,7 +704,7 @@ folder_panel.settings_tab.editbutton.name=Editar
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Remover
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
