--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -596,17 +596,17 @@ file_info.remote_deleted=Nyare version borttagen av annan anv\u00e4ndare
 ##file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.duplicate=Dublett filnamn hittat (med olika skiftl\u00e4ge, stora/sm\u00e5 bokst\u00e4ver)
+filename_problem.duplicate=Dublett filnamn hittat (med olika skiftl\u00e4ge, stora/sm\u00e5 bokst\u00e4ver) - {0}
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
-filename_problem.ends_with_illegal_char=Filnamnet slutar med ett ol\u00e4mpligt tecken
+filename_problem.ends_with_illegal_char=Filnamnet slutar med ett ol\u00e4mpligt tecken - {0}
 ##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars=Filnamnet inneh\u00e5ller ol\u00e4mpliga tecken
+filename_problem.not_recommended_chars=Filnamnet inneh\u00e5ller ol\u00e4mpliga tecken - {0}
 ##filename_problem.not_recommended_chars.soln_desc=Rename the file
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.reserved_filename=Filnamnet \u00e4r ett reserverat filnamn p\u00e5 Windows
+filename_problem.reserved_filename=Filnamnet \u00e4r ett reserverat filnamn p\u00e5 Windows - {0}
 ##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
+##filename_problem.too_long=The filename is too long - {0}
 ##filename_problem.too_long.soln_desc=Rename the file
 
 ##files_stats_panel.deleted_label=Deleted\: {0}
@@ -690,7 +690,7 @@ folder_panel.settings_tab.editbutton.name=Editera
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Ta bort
 
-##folder_problem.no_owner=No owner found
+##folder_problem.no_owner=No owner found - {0}
 ##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
 ##folder_problem.no_owner.no_login.title=Not logged in
 ##folder_problem.no_owner.soln_desc=Become owner of this folder now.
