--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1370,7 +1370,7 @@ pro.download_csv.description=T\u00e9l\u00e9charger la liste des comptes au forma
 #orig#pro.download_csv.key=D
 pro.download_csv.key=T
 #orig#pro.download_csv.name=Download as CSV
-pro.download_csv.name=T\u00e9l\u00e9charger une liste au format CSV
+# Too LONG: pro.download_csv.name=T\u00e9l\u00e9charger une liste au format CSV
 ##pro.filelist_writer.description=Writes the filelists as CSV file into the folder
 ##pro.filelist_writer.name=Filelist Writer
 ##pro.home_tab.disabled=Not running. Activate now
