--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -291,7 +291,7 @@ action_online_storage.key=O
 action_online_storage.name=Online Speicher
 
 #orig#action_open_about_box.description=Show information about PowerFolder
-action_open_about_box.description=Zeigt Informationen \u00fcber PowerFolder
+action_open_about_box.description=Zeigt Informationen \u00fcber {APPNAME}
 #orig#action_open_about_box.key=A
 action_open_about_box.key=\u00dc
 #orig#action_open_about_box.name=About
